# AstroMQPy

./: LICENSE  README.md  distance between stars.ipynb  requirements.txt  setup.cfg  setup.py
mqutils/: utils.py
