[aliases]
test=pytest

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[metadata]
author = Amir E Bazkiaei & Shalmalee Kapse
author_email = google_for_it
description = We put small functions which we have created here.
edit_on_github = True
github_project = Practice with Python in Astronomy/AstroMQPyGit
keywords = galaxies astronomy observatory image 
license = GNU GPL v3+
long_description = We create functions everyday which might be usefull to keep them to prevent recreating them.
package_name = utils
